test/simple/typeerrors/Examples/BgImplicitVarBind.hs
module BgImplicitVarBind where

f = True
g = if f then 3 else f
